objects/sortablegrid__SDG_Action__c.object
<CustomObject>
    <fields>
        <fullName>sortablegrid__Action_Order__c</fullName>
        <label>Action Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Row Button</fullName>
                </value>
                <value>
                    <fullName>List Button</fullName>
                </value>
                <value>
                    <fullName>List Multi</fullName>
                    <label>List Multi-Select</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sortablegrid__Event_Payload__c</fullName>
        <inlineHelpText>Payload for the event.  For LIST actions, will automatically replace #parentrecordId# with valid id.  For ROW actions, will automatically replace fieldnames with # at beginning and end with the corresponding values.  example: 
{
   &quot;recordId&quot;: &quot;#Id#&quot;
}</inlineHelpText>
        <label>Event Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Event__c</fullName>
        <inlineHelpText>Lightning event to raise: eg c.force:editRecord</inlineHelpText>
        <label>Event</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Icon__c</fullName>
        <inlineHelpText>Icon name from Lightning Design System - eg standard:contact</inlineHelpText>
        <label>Icon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Requires_Createable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only show this action if the user is required to have Create rights on the sObject on the grid.</inlineHelpText>
        <label>Requires Createable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Requires_Deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only show this action if the user is required to have Delete rights on the sObject on the grid.</inlineHelpText>
        <label>Requires Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Requires_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only show this action if the user is required to have Edit rights on the sObject on the grid.</inlineHelpText>
        <label>Requires Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__SDG__c</fullName>
        <label>SDG</label>
        <referenceTo>sortablegrid__SDG__c</referenceTo>
        <relationshipLabel>Sortable Data Grid Actions</relationshipLabel>
        <relationshipName>SDG_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sortable Data Grid Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sortable Data Grid Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sortablegrid__Payload_must_end_with_brace</fullName>
        <active>true</active>
        <errorConditionFormula>RIGHT( sortablegrid__Event_Payload__c , 1) != &apos;}&apos;</errorConditionFormula>
        <errorMessage>Payload must end with a }</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sortablegrid__Payload_must_start_with_brace</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT( sortablegrid__Event_Payload__c , 1) != &apos;{&apos;</errorConditionFormula>
        <errorMessage>Payload must start with a {</errorMessage>
    </validationRules>
</CustomObject>